# LeadFlow-CRM-AI-Powered-Lead-Management-System

./: README.md  Untitled spreadsheet - dummy_leads_1000_updated (2).csv  lead-form.html  main.py  pyproject.toml
backend/: app.py  auth.py  config.py  database.py  models.py  requirements.txt  schemas.py
backend/routes/: analytics.py  auth.py  leads.py
backend/services/: __init__.py  analytics_service.py  auth_service.py  lead_service.py
backend/utils/: helpers.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/followups/: page.tsx
frontend/app/leads/: page.tsx
frontend/app/leads/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: Badges.tsx  Sidebar.tsx  TopNav.tsx
frontend/lib/: api.ts  types.ts
